namespaces/live.cloud-platform.service.justice.gov.uk/psr-ai-design-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "psr-ai-design-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "psr-ai-general"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Pre-Sentence Report AI: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/psr-ai-design-prototype"
    cloud-platform.justice.gov.uk/team-name: "psr-ai-design-prototype-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
